--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,11 @@ jobs:
           java-version: 11
       - name: Build
         run: ./mvnw verify -B
+      - name: install ssh key
+        uses: webfactory/ssh-agent@v0.4.1
+        with:
+          ssh-private-key: ${{ secrets.VM82 }}
+      - name: create .ssh/known_hosts
+        run: |
+          ssh-keyscan -H -t rsa -v vm82.htl-leonding.ac.at  >> ~/.ssh/known_hosts
+
