--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+
+
 ## This is basic continuous integration build for your Quarkus application.
 
 name: Quarkus Codestart CI
@@ -18,12 +20,17 @@ jobs:
         with:
           java-version: 11
       - name: Build
-        run: ./mvnw verify -B
+        run: ./mvnw clean package -Dquarkus.package.type=uber-jar -B
       - name: install ssh key
         uses: webfactory/ssh-agent@v0.4.1
         with:
-          ssh-private-key: ${{ secrets.VM82 }}
+          ssh-private-key: ${{ secrets.ORAVM }}
       - name: create .ssh/known_hosts
         run: |
-          ssh-keyscan -H -t rsa -v vm82.htl-leonding.ac.at  >> ~/.ssh/known_hosts
+          ssh-keyscan -H -t rsa -v ${{ secrets.ORAVM_IP }}  >> ~/.ssh/known_hosts
+      - name: copy binaries to oravm
+        run: |
+          echo "Hallo ich bin hier"
+          ls -l target/
+          scp target/actions-demo-1.0.0-SNAPSHOT-runner.jar ${{ secrets.ORAVM_USER }}@${{ secrets.ORAVM_IP }}:
 
